Dedicated Form Components

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10475,3 +10475,11 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+body {
+  padding-top: 2rem;
+}
+
+.is-active a {
+  color: #000;
+}
+
