--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,11 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+body{
+  padding-top: 2rem;
+}
+.is-active{
+  a{
+    color: #000;
+  }
+}
